Let the CSS use counter prefs be independent.
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
People
(Reporter: emilio, Assigned: emilio)
Details
Attachments
(2 files)
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-beta+
|
Details | Review |
So that they can be enabled separately.
Assignee | ||
Comment 1•6 years ago
|
||
-
Let layout.css.use-counters.enabled be independent from the unimplemented
property counters. -
Always count in the style system (that is, always create
Document::mStyleUseCounters), so that the warning from bug 1582374 works
irrespective of these prefs. -
Add a pref check to the SVGElement code path so that the prefs properly
reflect whether the histograms end up being recorded or not. -
Make the pref checks consistent (check both when reporting telemetry, not
earlier).
Assignee | ||
Comment 3•6 years ago
|
||
![]() |
||
Comment 5•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/ec8953817ef0
https://hg.mozilla.org/mozilla-central/rev/fea9c97d5004
Assignee | ||
Comment 6•6 years ago
|
||
Comment on attachment 9094392 [details]
Bug 1582814 - followup: fix a test now that we always count in the style system.
Beta/Release Uplift Approval Request
- User impact if declined: See bug 1578661 comment 51.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: Bug 1578661
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Just shuffles the prefs so that we can enable just the use counters that the webcompat team needs.
- String changes made/needed: none
Assignee | ||
Updated•6 years ago
|
![]() |
||
Comment 7•6 years ago
|
||
Comment on attachment 9094392 [details]
Bug 1582814 - followup: fix a test now that we always count in the style system.
OK for uplift for beta 10. This is work for the webcompat use counters experiment in beta/release 70.
![]() |
||
Updated•6 years ago
|
Comment 8•6 years ago
|
||
Got conflict while uplifting to beta:
raul@raul-VirtualBox ~/mozilla-unified beta(0) $ hg graft -er ec8953817ef0::fea9c97d5004
grafting 567820:ec8953817ef0 "Bug 1582814 - Let the CSS use counter prefs be independent. r=boris"
merging dom/base/Document.cpp
merging dom/svg/SVGElement.cpp
merging modules/libpref/init/StaticPrefList.yaml
merging servo/components/style/properties/properties.mako.rs
warning: conflicts while merging dom/base/Document.cpp! (edit, then use 'hg resolve --mark')
warning: conflicts while merging dom/svg/SVGElement.cpp! (edit, then use 'hg resolve --mark')
abort: unresolved conflicts, can't continue
(use 'hg resolve' and 'hg graft --continue')
Assignee | ||
Comment 9•6 years ago
|
||
![]() |
||
Comment 10•6 years ago
|
||
bugherder uplift |
Description
•